[package]
name = "authorized-wire-authenticated-key-exchange"
license = "MPL-2.0"
version = "0.1.0"
authors = ["Savannah Jackson <Boisterouscoder@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
serde = {version = "1.0.115",  features = ["derive"]}
serde_json = "1.0"
base64 = "0.13.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
debug = true