[package]
name = "awake"
license = "MPL-2.0"
version = "0.1.0"
authors = ["Savannah Jackson <Boisterouscoder@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.33"
futures = "0.3"
serde = {version = "1.0.115",  features = ["derive"]}
serde_json = "1.0"
bs58 = "0.4.0"
# simple-error = "0.2.3"
ucan = "0.6.0-alpha.1"
js-sys = "0.3.60"
web-sys = {version = "0.3.60", features = ["Window", "Crypto", "SubtleCrypto", "CryptoKeyPair", "CryptoKey", "console"]}
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
quickcheck = "1.0.3"
quickcheck_macros = "1"

[profile.release]
debug = true